--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,1 +1,9 @@
-<p>blog works!</p>
+<div fxLayout="row" fxLayoutAlign="center center" class="blog" id="blog">
+    <div class="blog__container" fxLayoutAlign="center start">
+      <div class="blog__container__detail" fxLayout="column" fxLayoutGap="5%">
+          <h1>READ OUR BLOG</h1>
+          <div class="blog__container__detail__subtitle">Catch up with our latest thinking on responsible AI and its impact on todays society.</div>
+          <button mat-raised-button color="accent"><a href="https://linkedin.com" target="_blank">Go To Blog</a></button>
+      </div>
+    </div>
+  </div>
