--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,7 @@
-<p>home works!</p>
+<div fxLayout="row" fxLayoutAlign="center center" class="home">
+    <div class="home__container" fxLayoutAlign="center start">
+      <div class="home__container__detail" fxLayout="column" fxLayoutGap="5%">
+       
+      </div>
+    </div>
+  </div>
