--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -9,11 +9,17 @@
         margin-left: 2rem;
     }
     &__list{
-        padding: 1rem;
+        padding: 0;
         display: inline-flex;
         width: 40%;   
         &__item{
-
+            padding: 1rem;
+            height: 100%!important;
+            min-width: 5rem;
+        }
+        .active{
+            border-bottom: solid 2px blue;
+            font-weight: 700;
         }
     }
 }
