--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,14 @@
-<p>about works!</p>
+<div class="about">
+    <div class="about__container">
+     <section class="about__container__landing">
+
+
+     </section>
+     <section class="about__container__knowledge">
+       
+    </section>
+    <section class="about__container__integration">
+       
+    </section>
+    </div>
+</div>
