--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,1 +1,15 @@
-<p>contact works!</p>
+<div class="contact">
+    <div class="contact__container">
+     <section class="contact__container__landing">
+
+
+     </section>
+     <section class="contact__container__knowledge">
+       
+    </section>
+    <section class="contact__container__integration">
+       
+    </section>
+    </div>
+</div>
+
