--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,14 @@
-<div fxLayout="row" fxLayoutAlign="center center" class="home">
-    <div class="home__container" fxLayoutAlign="center start">
-      <div class="home__container__detail" fxLayout="column" fxLayoutGap="5%">
+<div class="home">
+    <div class="home__container">
+     <section class="home__container__landing">
+
+
+     </section>
+     <section class="home__container__knowledge">
        
-      </div>
+    </section>
+    <section class="home__container__integration">
+       
+    </section>
     </div>
-  </div>
+</div>
