--- a/src/app/integration/integration.component.html
+++ b/src/app/integration/integration.component.html
@@ -1,1 +1,15 @@
-<p>integration works!</p>
+<div class="integration">
+    <div class="integration__container">
+     <section class="integration__container__landing">
+
+
+     </section>
+     <section class="integration__container__knowledge">
+       
+    </section>
+    <section class="integration__container__integration">
+       
+    </section>
+    </div>
+</div>
+
