--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,1 +1,15 @@
-<p>product works!</p>
+<div class="product">
+    <div class="product__container">
+     <section class="product__container__landing">
+
+
+     </section>
+     <section class="product__container__knowledge">
+       
+    </section>
+    <section class="product__container__integration">
+       
+    </section>
+    </div>
+</div>
+
