--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,3 +1,10 @@
 .home {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    &__container{
+        width: 80vw;
+      
+    }
 
 }
