added flex layout module and pictures

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,14 +1,19 @@
 <div class="home">
     <div class="home__container">
      <section class="home__container__landing">
-
-
+        <div>
+            
+        </div>
+        <div>
+            <img src="../../assets/images/home-landing.png" alt="">
+        </div>
      </section>
      <section class="home__container__knowledge">
+        <img src="../../assets/images/home-knowledge.png" alt="">
        
     </section>
     <section class="home__container__integration">
-       
+       <img src="../../assets/images/home-integ.png" alt="">
     </section>
     </div>
 </div>
