--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,15 +6,56 @@
             <button mat-raised-button routerLink="/contact">Get in Touch</button>  
         </div>
         <div fxFlex="55%" fxLayoutAlign="center center">
-            <img width="90%" src="../../assets/images/home-landing.png" alt="">
+            <img width="80%" src="../../assets/images/home-landing.png" alt="">
         </div>
      </section>
-     <section fxLayout="row" class="home__container__knowledge">
-        <!-- <img src="../../assets/images/home-knowledge.png" alt=""> -->
-       
+
+     <section fxLayout="row" class="home__container__landing">
+        <div fxFlex="55%" fxLayoutAlign="center center">
+            <img width="80%" src="../../assets/images/home-knowledge.png" alt="">
+        </div>
+        <div fxLayout="column" fxFlex="45%" fxLayoutAlign="center flex-start" class="home__container__landing__box">
+            <h2>Bridging the knowledge gap between Legal Teams and Data Scientists </h2>
+            <div class="home__container__landing__box__divider"></div>
+            <p>
+                We are Responsibly - an ethical AI auditing and reporting 
+                framework that empowers data scientists and legal teams to work together 
+                and accelerate the innovation process in large enterprises. 
+            </p>
+            <p>
+                Our framework bridges the knowledge gap between Legal Teams 
+                and Data Scientists by ensuring the creation of interpretable, 
+                explainable, and ethical AI models. 
+                Legal teams can now feel empowered and confident that 
+                regulatory compliance is being upheld.
+            </p>
+        </div> 
     </section>
-    <section fxLayout="row" class="home__container__integration">
-       <!-- <img src="../../assets/images/home-integ.png" alt=""> -->
+
+    <section fxLayout="row" class="home__container__landing">
+        <div fxLayout="column" fxFlex="45%" fxLayoutAlign="center flex-start" class="home__container__landing__box">
+            <h2>Seamless Integration</h2>
+            <div class="home__container__landing__box__divider"></div>
+            <p>
+                Okay, it might all sound very complicated but don't worry, it's not. 
+                Data scientists and software engineers can integrate our product 
+                by simply by making a call to our API endpoint. 
+                This is where the magic happens!
+ 
+            </p>
+            <p>
+                Any bias in your data is detected and the returned response is 
+                a generated report outlining how ethical your  
+                your AI model truly is and how it can be improved.
+            </p>
+            <p>
+                It's that simple!
+            </p>
+        </div> 
+        <div fxFlex="55%" fxLayoutAlign="center center">
+            <img width="80%" src="../../assets/images/home-integ.png" alt="">
+        </div>
+
     </section>
     </div>
 </div>
