--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -5,15 +5,27 @@
     justify-content: center;
     align-items: center;
     &__container{
-        width: 80vw;
+        width: 75vw;
         &__landing{
-            height: 90vh;
+            height: 100vh; 
             &__box{
                 h1{
                     font-size: 3rem;
+                    color: #3F3D56;
                 }
                 button{
                     @extend %contact-button;
+                }
+                p{
+                    line-height: 1.5rem;
+                }
+
+                &__divider{
+                    background-color: #4285F4;
+                    height: 2px;
+                    width: 4rem;
+                    margin: 1rem 0;
+                    border: 1px #4285F4 solid;
                 }
             }  
         }
