--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -1,6 +1,10 @@
 .nav {
+    width: 100%;
+    height: 12vh;
     display: flex;
-
+    position: fixed;
+    z-index: 100;
+    background-color: white;
     &__logo{
         display: flex;
         justify-content: flex-start;
@@ -10,8 +14,7 @@
     }
     &__list{
         padding: 0;
-        display: inline-flex;
-        width: 40%;   
+        display: inline-flex;  
         &__item{
             padding: 1rem;
             height: 100%!important;
