--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,9 @@
-<p>footer works!</p>
+<div class="footer" fxLayout="column">
+    <div class="footer__social">
+hi
+    </div>
+    <div class="footer__general">
+        helo
+    </div>
+
+</div>
