--- a/src/app/get-started/get-started.component.html
+++ b/src/app/get-started/get-started.component.html
@@ -1,1 +1,11 @@
-<p>get-started works!</p>
+<div class="get-started"  fxLayout="row" fxLayoutAlign="center center">
+    <div class="get-started__container">
+        <div class="get-started__container__divider"></div>
+        <h1>Get Started with Responsibly</h1>
+        <p>Let machine learning accelerate the pace of innovation in your company today. 
+        </p>
+        <button mat-raised-button routerLink="/contact">Get in Touch</button>  
+    </div>
+
+</div>
+
