--- a/src/assets/scss/_placeholders.scss
+++ b/src/assets/scss/_placeholders.scss
@@ -1,3 +1,4 @@
+@import'../scss/variables';
 
 %contact-button {
     background-color:#4285F4;
@@ -8,3 +9,12 @@
     padding: .2rem;
     box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.16);
 }
+
+%divider {
+    background-color: map-get($colors, primary);
+    height: 2px;
+    width: 4rem;
+    margin: 1rem 0;
+    border: 1px #4285F4 solid;
+}
+
