--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -1,10 +1,34 @@
+@import '../../assets/scss/placeholders';
+@import '../../assets/scss/variables';
+
 .about {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    width: 70vw;
+    margin: 10% auto 0;
+    &__divider{
+        @extend %divider;
+    }
+    p{
+        line-height: 1.5rem;
+        color: map-get($colors, paragraphs);
+        margin-bottom: 2rem;
+    }
     &__container{
-        width: 80vw;
-      
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        &__card {
+            background-color: #f7f7f7;
+            border-radius: 0px!important;
+            box-shadow: 0px 6px 6px 0px rgba(0,0,0,0.1);
+            padding: 0 0 1rem;
+            &__member-name{
+                color: map-get($colors, headings);
+                margin-bottom: 0;
+            }
+            &__member-role{
+                color: #707070;
+            }
+        }
     }
 
 }
