--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -20,7 +20,7 @@
             height: 100%!important;
         }
         .active{
-            border-bottom: solid 2px blue;
+            border-bottom: solid 2px #4285F4;
             font-weight: 700;
         }
     }
