--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,14 +1,50 @@
 <div class="product">
-    <div class="product__container">
-     <section class="product__container__landing">
-
-
+    <div fxLayout="column" class="product__container">
+     <section fxLayout="row" fxLayoutAlign="center center" class="product__container__data">
+        <div fxLayout="column" fxFlex="40%" fxLayoutAlign="center flex-start" class="product__container__data__box">
+            <h2> Enable Data Scientists & Engineers </h2>
+            <div class="product__container__legal__box__divider"></div>
+            <p>
+                We enable data scientists and engineers by detecting 
+                and reducing bias in their data and AI Models.
+            </p>
+        </div>
+        <div fxFlex="60%" fxLayoutAlign="center center">
+            <img width="80%" src="../../assets/images/product-data.png" alt="">
+        </div>
      </section>
-     <section class="product__container__knowledge">
-       
+
+     <section fxLayout="row" class="product__container__legal">
+        <div fxFlex="55%" fxLayoutAlign="center center">
+            <img width="80%" src="../../assets/images/product-legal.png" alt="">
+        </div>
+        <div fxLayout="column" fxFlex="45%" fxLayoutAlign="center flex-start" class="product__container__legal__box">
+            <h2>Empower In House Legal Teams</h2>
+            <div class="product__container__legal__box__divider"></div>
+            <p>
+                We empower in house Legal Teams by ensuring all AI models are interpretable, 
+                explainable and bias free. Our Legal Compliance Reporting 
+                tool arms legal entities with the information 
+                they need to ensure all technological innovation is regulatory compliant. 
+            </p>
+        </div> 
     </section>
-    <section class="product__container__integration">
-       
+
+    <section fxLayout="row" class="product__container__user">
+        <div fxLayout="column" fxFlex="45%" fxLayoutAlign="center flex-start" class="product__container__user__box">
+            <h2>Create transparency for end users</h2>
+            <div class="product__container__user__box__divider"></div>
+            <p>
+                We ensure that all end users understand the logic behind 
+                the outcome of an executed AI algorithm through the 
+                explainability of the AI models that have been audited.
+ 
+            </p>
+
+        </div> 
+        <div fxFlex="55%" fxLayoutAlign="center center">
+            <img width="80%" src="../../assets/images/product-user.png" alt="">
+        </div>
     </section>
     </div>
 </div>
