--- a/src/app/integration/integration.component.html
+++ b/src/app/integration/integration.component.html
@@ -1,15 +1,29 @@
 <div class="integration">
     <div class="integration__container">
-     <section class="integration__container__landing">
-
-
-     </section>
-     <section class="integration__container__knowledge">
-       
-    </section>
-    <section class="integration__container__integration">
-       
-    </section>
+        <section fxLayout="row" class="integration__container__integration">
+            <div fxLayout="column" fxFlex="45%" fxLayoutAlign="center flex-start" class="integration__container__integration__box">
+                <h2>Seamless Integration</h2>
+                <div class="integration__container__section__box__divider"></div>
+                <p>
+                    Okay, it might all sound very complicated but don't worry, it's not. 
+                    Data scientists and software engineers can integrate our product 
+                    by simply by making a call to our API endpoint. 
+                    This is where the magic happens!
+     
+                </p>
+                <p>
+                    Any bias in your data is detected and the returned response is 
+                    a generated report outlining how ethical your  
+                    your AI model truly is and how it can be improved.
+                </p>
+                <p>
+                    It's that simple!
+                </p>
+            </div> 
+            <div fxFlex="55%" fxLayoutAlign="center center">
+                <img width="80%" src="../../assets/images/integ.png" alt="">
+            </div>
+        </section>
     </div>
 </div>
 
