--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,5 +1,8 @@
 <div class="blog">
   <div class="blog__container">
-
+    <img width="20%" src="../../assets/images/blog.png" alt="blog picture">
+    <button mat-raised-button>
+      <a href="http://linkedin.com" target="_blank">Read Our Blog</a>
+    </button>
   </div>
 </div>
