--- a/src/app/blog/blog.component.scss
+++ b/src/app/blog/blog.component.scss
@@ -1,10 +1,25 @@
+@import '../../assets/scss/placeholders';
+
 .blog {
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
     &__container{
-        width: 80vw;
-      
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-top: 5%;
+        width: 70vw;
+      button{
+        @extend %contact-button;
+        margin: 4rem 0;
+        a{
+            text-decoration: none;
+            color: white;
+        }
+      }
     }
 
 }
