--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -11,9 +11,9 @@
             <div>Responsibly</div>
         </div>
         <div class="footer__general__terms">
-           <a>Terms & Conditions</a>
-           <a>Usage</a>
-           <a>Privacy</a>
+           <a href="">Terms & Conditions</a>
+           <a href="">Usage</a>
+           <a href="">Privacy</a>
         </div>
         <div class="footer__general__copyright">
            @Copyright Responsibly 2020
