--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -26,6 +26,7 @@
             a {
                 margin: 0 1rem;
                 font-size: .8rem;
+                color: white;
             }
         }
 
