contact submit button

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -15,7 +15,7 @@
                 </div>
             </div>
             <form fxFlex="70%">
-                <div class="contact__container__form" fxLayout="column">
+                <div class="contact__container__form" fxLayout="column" fxLayoutAlign="start">
                     <mat-form-field style="width: 100%;">
                         <mat-label>Name</mat-label>
                         <input matInput>
@@ -28,6 +28,7 @@
                         <mat-label>Your Message</mat-label>
                         <textarea matInput></textarea>
                     </mat-form-field>
+                    <button type="submit" mat-raised-button>Submit</button>
                 </div>  
             </form>
         </section>
