added route guard

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,18 +3,14 @@
     grid-template-areas:
         'nav'
         'main'
-        'get-started'
         'footer';
     grid-template-columns: 1fr;
-    grid-template-rows: auto 1fr auto auto;
+    grid-template-rows: auto 1fr auto;
     &__navbar{
         grid-area: nav;
     }
     &__main{
         grid-area: main;
-    }
-    &__get-started{
-        grid-area: get-started;
     }
     &__footer{
         grid-area: footer;
