--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -16,15 +16,15 @@
             </div>
             <form fxFlex="70%">
                 <div class="contact__container__form" fxLayout="column" fxLayoutAlign="start">
-                    <mat-form-field style="width: 100%;">
+                    <mat-form-field>
                         <mat-label>Name</mat-label>
                         <input matInput>
                     </mat-form-field>
-                    <mat-form-field style="width: 100%;">
+                    <mat-form-field>
                         <mat-label>Email Address</mat-label>
                         <input matInput>
                     </mat-form-field>
-                    <mat-form-field style="width: 100%;">
+                    <mat-form-field     >
                         <mat-label>Your Message</mat-label>
                         <textarea matInput></textarea>
                     </mat-form-field>
@@ -32,7 +32,6 @@
                 </div>  
             </form>
         </section>
-
     </div>
 </div>
 
