--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -36,7 +36,7 @@
                 explainable and interpretable AI products which can 
                 be trusted by consumers.
             </h4>
-            <button mat-raised-button>Get in Touch</button>
+            <button mat-raised-button routerLink="/contact">Get in Touch</button>
         </div>
     </section>
      <section fxLayout="row" fxLayoutAlign="center center" class="product__container__data">
@@ -87,4 +87,4 @@
     </section>
     </div>
 </div>
-
+<app-get-started></app-get-started>
