added netlify form

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -14,19 +14,25 @@
                     </div>
                 </div>
             </div>
-            <form fxFlex="70%">
+            <form fxFlex="70%"  
+                [formGroup]="contactForm" 
+                name="contactForm"
+                (ngSubmit)="onFormSubmit(contactForm.value)" 
+                data-netlify="true"
+                method="POST"
+               >
                 <div class="contact__container__form" fxLayout="column" fxLayoutAlign="start">
                     <mat-form-field>
                         <mat-label>Name</mat-label>
-                        <input matInput>
+                        <input matInput formControlName="name" name="name" type="text">
                     </mat-form-field>
                     <mat-form-field>
                         <mat-label>Email Address</mat-label>
-                        <input matInput>
+                        <input matInput formControlName="email" name="email" type="text" >
                     </mat-form-field>
                     <mat-form-field     >
                         <mat-label>Your Message</mat-label>
-                        <textarea matInput></textarea>
+                        <textarea matInput formControlName="message" name="message" type="text" ></textarea>
                     </mat-form-field>
                     <button type="submit" mat-raised-button>Submit</button>
                 </div>  
